--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="navbar">
 <nav id="desktop-nav">
     <div class="logo">Harimohan</div>
-    <!-- &lt;!-- <button class="theme">Theme</button> --&gt; -->
+   
     <div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -55,7 +55,7 @@
 
 <section id="profile">
     <div class="section__pic-container">
-        <img decoding="async" id="profile1" src="./images/IMG_7012.JPG" alt="Harimohan Nishad profile picture" title="Harimohan Nishad" />
+        <img decoding="async" id="profile1" src="IMG_7012.JPG" alt="Harimohan Nishad profile picture" title="Harimohan Nishad" />
     </div>
     <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -77,11 +77,11 @@
      
         <div id="socials-container">
             <a target="_blank" href="https://www.linkedin.com/" rel="noopener">
-                <img decoding="async" src="./images/linkedin.png" alt="My LinkedIn profile" class="icon" />
+                <img decoding="async" src="linkedin.png" alt="My LinkedIn profile" class="icon" />
             </a>
 
             <a target="_blank" href="https://github.com/" rel="noopener">
-                <img decoding="async" src="./images/github.png" alt="My Github profile" class="icon" />
+                <img decoding="async" src="github.png" alt="My Github profile" class="icon" />
             </a>
         </div>
     </div>
@@ -98,12 +98,12 @@
         <div class="about-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <img decoding="async" src="./images/expericence.png" alt="Experience icon" class="icon" />
+                    <img decoding="async" src="expericence.png" alt="Experience icon" class="icon" />
                     <h3>Educational Experience</h3>
                     <p>2+ years <br />Frontend/Backend Development</p>
                 </div>
                 <div class="details-container">
-                    <img decoding="async" src="./images/education.png" alt="Education icon" class="icon" />
+                    <img decoding="async" src="education.png" alt="Education icon" class="icon" />
                     <h3>Education</h3>
                     <p>Bachelor of Technology<br /></p>
                 </div>
@@ -126,7 +126,7 @@
         </div>
     </div>
     <!-- arrow icon  -->
-    <!-- <img decoding="async" src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" /> -->
+    
 </section>
 
 <!-- experience  -->
@@ -141,7 +141,7 @@
                 <h2 class="experience-sub-title">Frontend Development</h2>
                 <div class="article-container">
                     <article>
-                        <img decoding="async" src="./images/html.png" alt="Experience icon" class="icon" />
+                        <img decoding="async" src="html.png" alt="Experience icon" class="icon" />
                         <div>
                             <h3>HTML5</h3>
                             <p>Frontend</p>
@@ -149,7 +149,7 @@
                         </div>
                     </article>
                     <article>
-                        <img decoding="async" src="./images/css.png " alt="css" icon class="icon" />
+                        <img decoding="async" src="css.png " alt="css" icon class="icon" />
                         <div>
                             <h3>CSS3</h3>
                             <p>Frontend</p>
@@ -157,7 +157,7 @@
                         </div>
                     </article>
                     <article>
-                        <img decoding="async" src="./images/javascript.png" alt="js" class="icon" />
+                        <img decoding="async" src="javascript.png" alt="js" class="icon" />
                         <div>
                             <h3>JavaScript</h3>
                             <p>Frontend</p>
@@ -165,7 +165,7 @@
                         </div>
                     </article>
                     <article>
-                        <img decoding="async" src="./images/react.png" alt="Experience icon" class="icon" />
+                        <img decoding="async" src="react.png" alt="Experience icon" class="icon" />
                         <div>
                             <h3>React</h3>
                             <p>Intermediate</p>
@@ -176,28 +176,28 @@
                 <h2 class="experience-sub-title">Development Tools &amp; Softwares</h2>
                 <div class="article-container">
                     <article>
-          <img decoding="async" src="./images/git.png" alt="Experience icon" class="icon" />
+          <img decoding="async" src="git.png" alt="Experience icon" class="icon" />
           <div>
             <h3>Git</h3>
             <p>Basic</p>
           </div>
         </article> 
                     <article>
-                        <img decoding="async" src="./images/github.png" alt="Experience icon" class="icon" />
+                        <img decoding="async" src="github.png" alt="Experience icon" class="icon" />
                         <div>
                             <h3>GitHub</h3>
                             <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
-                        <img decoding="async" src="./images/figma.png" alt="Experience icon" class="icon" />
+                        <img decoding="async" src="figma.png" alt="Experience icon" class="icon" />
                         <div>
                             <h3>Figma</h3>
                             <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
-                        <img decoding="async" src="./images/canva.png" alt="Experience icon" class="icon" />
+                        <img decoding="async" src="canva.png" alt="Experience icon" class="icon" />
                         <div>
                             <h3>Canva</h3>
                             <p>Intermediate</p>
@@ -224,7 +224,7 @@
         <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img decoding="async" src="./images/project.png" alt="Project 1" class="project-img" />
+                    <img decoding="async" src="project.png" alt="Project 1" class="project-img" />
                 </div>
                 <h2 class="experience-sub-title project-title">Calculator</h2>
                 <div class="btn-container">
@@ -243,7 +243,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img decoding="async" src="./images/project.png" alt="Project 2" class="project-img" />
+                    <img decoding="async" src="project.png" alt="Project 2" class="project-img" />
                 </div>
                 <h2 class="experience-sub-title project-title">Zomato</h2>
                 <div class="btn-container">
@@ -261,7 +261,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img decoding="async" src="./images/project.png" alt="Project 3" class="project-img" />
+                    <img decoding="async" src="project.png" alt="Project 3" class="project-img" />
                 </div>
                 <h2 class="experience-sub-title project-title" style="font-size: 1.2rem">Book My Show</h2>
                 <div class="btn-container">
@@ -287,11 +287,11 @@
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
         <div class="contact-info-container">
-            <img decoding="async" src="./images/email_3178158.png" alt="Email icon" class="icon contact-icon email-icon" />
+            <img decoding="async" src="email_3178158.png" alt="Email icon" class="icon contact-icon email-icon" />
             <p><a href="mailto:haiiry242025@gmail.com">haiiry242025@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
-            <img decoding="async" src="./images/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+            <img decoding="async" src="linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
             <p><a target="_blank" href="https://www.linkedin.com/" rel="noopener">LinkedIn</a></p>
         </div>
     </div>
